<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/rl_first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_label_pokemon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_pokemon_number" />

        <EditText
            android:id="@+id/et_pokemon_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_label_pokemon"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@id/bt_search_pokemon"
            android:drawableStart="@mipmap/poke"
            android:drawableLeft="@mipmap/poke"
            android:drawablePadding="@dimen/margin_base"
            android:hint="@string/hint_type_pokemon_id"
            android:inputType="number" />

        <Button
            android:id="@+id/bt_search_pokemon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/et_pokemon_number"
            android:layout_alignParentRight="true"
            android:text="@string/action_search" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/rl_second"
        android:layout_below="@+id/rl_first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>


</RelativeLayout>


